--- a/edu_simple_server/Makefile
+++ b/edu_simple_server/Makefile
@@ -1,4 +1,7 @@
 # For build_runner
 regen:
 	dart pub get && \
-	dart pub run build_runner build --delete-conflicting-outputs
+	dart run build_runner build --delete-conflicting-outputs
+
+watch:
+	dart run build_runner watch 
