--- a/edu_simple_server/pubspec.yaml
+++ b/edu_simple_server/pubspec.yaml
@@ -13,11 +13,14 @@ dependencies:
   shelf_router: ^1.0.0
   shelf_plus: ^1.2.2
   get_it: ^7.2.0
+  freezed: ^2.0.3+1
+  freezed_annotation: ^2.0.3
 
 dev_dependencies:
   shelf_router_generator: ^1.0.2
-  build_runner: ^2.1.10
+  build_runner: ^2.1.11
   http: ^0.13.0
   lints: ^1.0.0
   test_process: ^2.0.0
   test: ^1.15.0
+  json_serializable: ^6.2.0
